--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/router": "4.2.5",
     "nativescript-angular": "4.2.0",
     "nativescript-downloadmanager": "^0.1.0",
+    "nativescript-material-icons": "^1.0.3",
+    "nativescript-ng2-fonticon": "^1.3.4",
     "nativescript-theme-core": "1.0.4",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
-    "tns-core-modules": "3.2.0",
+    "tns-core-modules": "^3.2.0",
     "zone.js": "0.8.17"
   },
   "devDependencies": {
