--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nativescript-material-icons": "^1.0.3",
     "nativescript-ng2-fonticon": "^1.3.4",
     "nativescript-theme-core": "1.0.4",
+    "nativescript-toast": "^1.4.6",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
     "tns-core-modules": "^3.2.0",
